--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 tokio={version = "1",features = ["full"]}
+tokio-stream="0.1"
 futures="0.3"
 mini-redis="0.4"
 bytes="1"
