--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ futures="0.3"
 mini-redis="0.4"
 bytes="1"
 rand="0.8"
+clap = { version = "4.5.16", features = ["derive"] }
+anyhow = "1.0.86"
+flate2 = "1.0.33"
