--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ rand="0.8"
 clap = { version = "4.5.16", features = ["derive"] }
 anyhow = "1.0.86"
 flate2 = "1.0.33"
+sha1 = "0.10.6"
+hex = "0.4.3"
